--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.swp
+*.swo
 cmder/config/.history
-cmder/vendor/Sublime Text Portable/Data/Index/
+cmder/vendor/Sublime Text Portable/Data/Index
 cmder/vendor/Sublime Text Portable/Data/Local/Session.sublime_session
