--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 cmder/config/.history
 cmder/vendor/Sublime Text Portable/Data/Index
 cmder/vendor/Sublime Text Portable/Data/Local/Session.sublime_session
+cmder/vendor/Sublime Text Portable/Data/Installed Packages/PyV8/win64-p3/config.json
+cmder/vendor/Sublime Text Portable/Data/Packages/User/Package Control.cache
+cmder/vendor/Sublime Text Portable/Data/Packages/User/Package Control.last-run
